<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.screen.add.AddStoryActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/previewImageView"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_placeholder" />

    <FrameLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="24dp">

        <Button
            android:id="@+id/btnCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="24dp"
            android:text="@string/camera" />

        <Button
            android:id="@+id/btnGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="24dp"
            android:text="@string/gallery" />

    </FrameLayout>

    <com.fadhil.storyapp.ui.component.MyEditText
        android:id="@+id/etDescription"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="24dp"
        android:gravity="top|start"
        android:hint="@string/description" />

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="24dp"
        android:text="@string/upload" />

</androidx.appcompat.widget.LinearLayoutCompat>